sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while (tri = false)
             ^AlgCocktailSort1:10: error: not found: value estPlusPetit
    if (estPlusPetit(i,i+1))
        ^AlgCocktailSort1:25: error: not found: value estplusPetit
     if (estplusPetit(i,i+1))
         ^